--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sizer: ^2.0.15
   http: ^1.2.1
   provider: ^6.1.2
+  cached_network_image: ^3.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,7 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/ip15.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/noImagePlaceholder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
