--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^6.1.2
   cached_network_image: ^3.3.1
   shared_preferences: ^2.2.3
+  flutter_native_splash: ^2.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +56,15 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+
+
+flutter_native_splash: 
+  color: "#48D861"
+  android_12:
+    color: "#48D861"
+  
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
